src/test/deca/context/valid/homemade/tests/test13_creation_classe.deca
// test valide de la règle 1.3


class A {}

class B extends A {}

class C extends B{}