src/test/deca/context/invalid/homemade/tests/test13_creation_classe/test13_creation_classe1.deca
// test invalide de la règle 1.3


class A extends B{}